--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Some text...</p>
+    <p id="selected" >Some text...</p>
+    <p>Some text...</p>
+    <p class="mark">Some text...</p>
+    <p>Some text...</p>
+    <p class="mark">Some text...</p>
+    <p>Some text...</p>
+    <p class="mark">Some text...</p>
+    <p>Some text...</p>
+    
 </body>
 </html>
