--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello world</h1>
-    <p>Some text...</p>
-    <p id="selected" >Some text...</p>
-    <p>Some text...</p>
-    <p class="mark">Some text...</p>
-    <p>Some text...</p>
-    <p class="mark">Some text...</p>
-    <p>Some text...</p>
-    <p class="mark">Some text...</p>
-    <p>Some text...</p>
-    
+    <header>
+        <h1>Hello world</h1>
+        <p>Some text...</p>
+        <p>Some text...</p>
+    </header>
 </body>
+
 </html>
