--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h1>Hello world</h1>
         <p>Some text...</p>
         <p>Some text...</p>
+        <nav>
+            <p>Links</p>
+        </nav>
     </header>
 </body>
 
