--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     </header>
     <p>Some text...</p>
     <p>Some text...</p>
+    <a href="http://google.com">Google</a>
+    <a href="https://facebook.com">Facebook</a>
+    <a href="https://instagra,.com">Instagram</a>
+    <a href="http://twitter.com">Twitter</a>
 </body>
 
 </html>
