--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Some text...</p>
     <a href="http://google.com">Google</a>
     <a href="https://facebook.com">Facebook</a>
-    <a href="https://instagra,.com">Instagram</a>
+    <a href="https://instagram.com">Instagram</a>
     <a href="http://twitter.com">Twitter</a>
 </body>
 
