--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-    
+    <header>
+        <nav>
+        <div class="toolbar">
+            <div class="about_me">
+                About me
+            </div>
+            <div class="details">
+                    Details
+                </div>
+        </div>
+        
+        </nav>
+    </header>
 </body>
 
 </html>
