--- a/index.html
+++ b/index.html
@@ -12,17 +12,31 @@
 <body>
     <header>
         <nav>
-        <div class="toolbar">
-            <div class="about_me">
-                About me
-            </div>
-            <div class="details">
+            <div class="toolbar">
+                <div class="about_me">
+                    About me
+                </div>
+                <div class="details">
                     Details
                 </div>
-        </div>
-        
+                <div class="contacts">
+                    Contacts
+                </div>
+                <div class="name">
+                    Oleh Petryk
+                </div>
+                <div class="drum_lessons">
+                    Drum
+                    <br> Lessons
+                </div>
+                <img src="img/DrumLogo.png" alt="logo">
+            </div>
+
         </nav>
     </header>
+    <div class="carousel">
+            <p>If you were looking</p>
+    </div>
 </body>
 
 </html>
