--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="icon" sizes="32x32" href="img/DrumLogo.png">
+    <title>Drums </title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta" />
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <nav>
             <div class="toolbar">
                 <div class="about_me">
-                    About me
+                    <a href="#about_me">About me</a>
                 </div>
                 <div class="details">
                     Details
@@ -36,7 +38,12 @@
     </header>
     <div class="carousel">
             <p>If you were looking</p>
+            <p class="bottom_carousel_first" >For drum lessons</p>
+            <p class="bottom_carousel_last">you`ve found the right place</p>
     </div>
+    <article id="about_me">
+        Hi! <br> my name is Oleh Petryk <br> I`m playing drums and percussion for almost 8 years <br> and now i`m ready to teach others.
+    </article>
 </body>
 
 </html>
