--- a/index.html
+++ b/index.html
@@ -37,13 +37,28 @@
         </nav>
     </header>
     <div class="carousel">
-            <p>If you were looking</p>
-            <p class="bottom_carousel_first" >For drum lessons</p>
-            <p class="bottom_carousel_last">you`ve found the right place</p>
+        <p>If you were looking</p>
+        <p class="bottom_carousel_first">For drum lessons</p>
+        <p class="bottom_carousel_last">you`ve found the right place</p>
     </div>
     <article id="about_me">
-        Hi! <br> my name is Oleh Petryk <br> I`m playing drums and percussion for almost 8 years <br> and now i`m ready to teach others.
+        Hi!
+        <br> My name is Oleh Petryk
+        <br> And i`m playing drums and percussion for almost 8 years
+        <br> and now i`m ready to teach others.
     </article>
+    <div class="my_band">
+        <aside class="left">
+            <p>At the time i`m playing in pop-rock band named "Rockons"</p>
+            <p>You can check out my band </p>
+           
+        </aside>
+        <aside class="right">
+                <a href="https://www.facebook.com/rockons.band/"></a>
+                <a href="https://www.instagram.com/rockons.lviv/"></a>
+                <a href="https://www.youtube.com/channel/UCJR6qE5x5T3QgCYodozj6FA/featured"></a>
+        </aside>
+    </div>
 </body>
 
 </html>
