--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#about_me">About me</a>
                 </div>
                 <div class="details">
-                    Details
+                    <a href="#details">Details</a>
                 </div>
                 <div class="contacts">
                     Contacts
@@ -47,18 +47,17 @@
         <br> And i`m playing drums and percussion for almost 8 years
         <br> and now i`m ready to teach others.
         <div class="my_band">
-                <aside class="left">
-                    <p>At the time i`m playing in pop-rock band named "Rockons"</p>
-                    <p>You can check out my band </p>
-        
-                </aside>
-                <aside class="right">
-                    <a href="https://www.facebook.com/rockons.band/"></a>
-                    <a href="https://www.instagram.com/rockons.lviv/"></a>
-                    <a href="https://www.youtube.com/channel/UCJR6qE5x5T3QgCYodozj6FA/featured"></a>
-                </aside>
-            </div>
-    </article>
+            <aside class="left">
+                <p>At the time i`m playing in pop-rock band named "Rockons"</p>
+                <p>You can check out my band </p>
+
+            </aside>
+            <aside class="right">
+                <a href="https://www.facebook.com/rockons.band/"></a>
+                <a href="https://www.instagram.com/rockons.lviv/"></a>
+                <a href="https://www.youtube.com/channel/UCJR6qE5x5T3QgCYodozj6FA/featured"></a>
+            </aside>
+        </div>
 </body>
 
 </html>
