--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
     <header>
         <nav>
             <div class="toolbar">
-                <div class="about_me">
-                    <a href="#about_me">About me</a>
+                <div class="buttons">
+                    <div class="about_me">
+                        <a href="#about_me">About me</a>
+                    </div>
+                    <div class="details">
+                        <a href="#details">Details</a>
+                    </div>
+                    <div class="contacts">
+                        Contacts
+                    </div>
                 </div>
-                <div class="details">
-                    <a href="#details">Details</a>
+                <div class="other">
+                    <div class="name">
+                        Oleh Petryk
+                    </div>
+                    <div class="drum_lessons">
+                        Drum
+                        <br> Lessons
+                    </div>
+                    <img src="img/DrumLogo.png" alt="logo">
                 </div>
-                <div class="contacts">
-                    Contacts
-                </div>
-                <div class="name">
-                    Oleh Petryk
-                </div>
-                <div class="drum_lessons">
-                    Drum
-                    <br> Lessons
-                </div>
-                <img src="img/DrumLogo.png" alt="logo">
             </div>
 
         </nav>
@@ -42,15 +46,16 @@
         <p class="bottom_carousel_last">you`ve found the right place</p>
     </div>
     <article id="about_me">
-        Hi!
-        <br> My name is Oleh Petryk
-        <br> And i`m playing drums and percussion for almost 8 years
-        <br> and now i`m ready to teach others.
+        <div class="description">
+            Hi!
+            <br> My name is Oleh Petryk
+            <br> And i`m playing drums and percussion for almost 8 years
+            <br> and now i`m ready to teach others.
+        </div>
         <div class="my_band">
             <aside class="left">
                 <p>At the time i`m playing in pop-rock band named "Rockons"</p>
                 <p>You can check out my band </p>
-
             </aside>
             <aside class="right">
                 <a href="https://www.facebook.com/rockons.band/"></a>
@@ -58,6 +63,26 @@
                 <a href="https://www.youtube.com/channel/UCJR6qE5x5T3QgCYodozj6FA/featured"></a>
             </aside>
         </div>
+        <article id="details">
+            <div class="text">
+                <p>
+                    Firstly you must contact me and we will discuss the schedule of our lessons. First lesson is free ;)
+                </p>
+            </div>
+            <div class="image">
+                <img src="img/phoneicon.png" alt="icon">
+                <img src="img/discussionicon.png" alt="icon">
+                <img src="img/scheduleicon.png" alt="icon">
+                <div class="circle1">1</div>
+                <div class="line1"></div>
+                <div class="circle2">2</div>
+                <div class="line2"></div>
+                <div class="circle3">3</div>
+                <div class="line3"></div>
+                <div class="line4"></div>
+            </div>
+        </article>
+
 </body>
 
 </html>
