--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#details">Details</a>
                     </div>
                     <div class="contacts">
-                        Contacts
+                            <a href="#contacts">contacts</a>
                     </div>
                 </div>
                 <div class="other">
