--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <article id="details">
             <div class="text">
                 <p>
-                    Firstly you must contact me and we will discuss the schedule of our lessons. First lesson is free ;)
+                    Firstly you must contact me and we will discuss the schedule of our lessons. <br> First lesson is free ;)
                 </p>
             </div>
             <div class="image">
