--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="#details">Details</a>
                     </div>
                     <div class="contacts">
-                            <a href="#contacts">Contacts</a>
+                        <a href="#contacts">Contacts</a>
                     </div>
                 </div>
                 <div class="other">
@@ -66,7 +66,8 @@
         <article id="details">
             <div class="text">
                 <p>
-                    Firstly you must contact me and we will discuss the schedule of our lessons. <br> First lesson is free ;)
+                    Firstly you must contact me and we will discuss the schedule of our lessons.
+                    <br> First lesson is free ;)
                 </p>
             </div>
             <div class="image">
@@ -82,7 +83,6 @@
                 <div class="line4"></div>
             </div>
         </article>
-
 </body>
 
 </html>
