--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
                 <div class="line4"></div>
             </div>
         </article>
+        <article id="feedback">
+            <div id="cards">
+                <div class="card_first">
+                    <p>asdsadasd</p>
+                </div>
+                <div class="card_second">
+                    <p>asdsadasd</p>
+                </div>
+                <div class="card_third">
+                    <p>asdsadasd</p>
+                </div>
+            </div>
+        </article>
 </body>
 
 </html>
