--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" sizes="32x32" href="img/DrumLogo.png">
     <title>Drums </title>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta" />
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta" /> -->
 </head>
 
 <body>
@@ -16,7 +15,7 @@
         <nav>
             <div class="toolbar">
                 <div class="buttons">
-                    <div class="about_me">
+                    <div class="aboutme">
                         <a href="#about_me">About me</a>
                     </div>
                     <div class="details">
@@ -28,7 +27,7 @@
                 </div>
                 <div class="other">
                     <div class="name">
-                        Oleh Petryk
+                        Oleh <br> Petryk
                     </div>
                     <div class="drum_lessons">
                         Drum
@@ -41,9 +40,12 @@
         </nav>
     </header>
     <div class="carousel">
+        <div class="text">
+        <p class="main">OLEH PETRYK DRUM LESSONS</p>
         <p>If you were looking</p>
-        <p class="bottom_carousel_first">For drum lessons</p>
-        <p class="bottom_carousel_last">you`ve found the right place</p>
+        <p class="paragraph" >For drum lessons</p>
+        <p class="paragraph">you`ve found the right place</p>
+        </div>
     </div>
     <article id="about_me">
         <div class="description">
